PREVIEW ONLY (not for merge): full Ranger docs site, phases 1-5
Snapshot of the complete MkDocs site for reviewers to browse on the fork's
GitHub Pages. The reviewable change is on branch ranger-docs-phase1
(RANGER-5355); later phases will follow as separate pull requests.